--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -1,31 +1,50 @@
-name: Test
+name: Run Tests
 on:
-  push:
-    branches: [main]
   pull_request:
-    bracnhes: [main]
+  push:
+    branches:
+      - main
 
 jobs:
-  test:
+  unit-tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        python-version: [3.10]
-        poetry-version: [1.1.12]
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+        # Select the Python versions to test against
+        os: ["ubuntu-latest", "macos-latest"]
+        python-version: ["3.10", "3.11"]
+      fail-fast: true
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: Check out the code
+        uses: actions/checkout@v3.5.2
+        with:
+          fetch-depth: 1
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2.0.0
+
+      # Install Poetry
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.3.3
         with:
-          poetry-version: ${{ matrix.poetry-version }}
-      - name: Install dependencies
-        run: poetry install
-      - name: Run tests
-        run: poetry run pytest --cov=./ --cov-report=xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+          version: 1.4.0
+
+      # Configure Poetry to use the virtual environment in the project
+      - name: Setup Poetry
+        run: |
+          poetry config virtualenvs.in-project true
+
+      # Install the dependencies
+      - name: Install Package
+        run: |
+          poetry install --with tests
+
+      - name: Check docstrings
+        run: |
+          poetry run xdoctest ./gpjax
+
+      # Run the unit tests and build the coverage report
+      - name: Run Tests
+        run: poetry run pytest -v --cov=./gpjax --cov-report=xml:./coverage.xml
