--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       matrix:
         # Select the Python versions to test against
-        os: ["ubuntu-latest", "macos-latest"]
+        os: [ubuntu-latest]
         python-version: [3.10", "3.11"]
-      fail-fast: true
+      fail-fast: false
     steps:
       - name: Check out the code
         uses: actions/checkout@v3.5.2
@@ -44,3 +44,6 @@ jobs:
       # Run the unit tests and build the coverage report
       - name: Run Tests
         run: poetry run pytest -v --cov=./finitevolx --cov-report=xml:./coverage.xml
+
+      - name: Codecov
+        uses: codecov/codecov-action@v3.1.0
