--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       matrix:
         # Select the Python versions to test against
-        os: [ubuntu-latest]
-        python-version: [3.10", "3.11"]
-      fail-fast: false
+        os: [ubuntu-20.04, macos-latest]
+        python-version: ["3.10", "3.11"]
+      fail-fast: true
     steps:
       - name: Check out the code
         uses: actions/checkout@v3.5.2
