--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,8 +67,11 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
-[tool.pytest.ini_options]
-testpaths = ["oceanbench"]
+[tool.pytest.ini_options] # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
+# addopts = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --typeguard-packages=my_package --verbosity=2 --junitxml=reports/pytest.xml"
+filterwarnings = ["error", "ignore::DeprecationWarning"]
+testpaths = ["finitevolx"]
+xfail_strict = true
 
 
 [tool.ruff] # https://github.com/charliermarsh/ruff
@@ -79,48 +82,52 @@ exclude = ["docs/"]
 ignore-init-module-imports = true
 line-length = 88
 select = [
-    # pyflakes
-    "F",
-    # pycodestyle
-    "E",
-    "W",
-    # flake8-2020
-    "YTT",
-    # flake8-bugbear
-    "B",
-    # flake8-quotes
-    "Q",
-    # pylint
-    "PLE",
-    "PLR",
-    "PLW",
-    # misc lints
-    "PIE",
-    # flake8-pyi
-    "PYI",
-    # tidy imports
-    "TID",
-    # implicit string concatenation
-    "ISC",
+  # pyflakes
+  "F",
+  # pycodestyle
+  "E",
+  "W",
+  # flake8-2020
+  "YTT",
+  # flake8-bugbear
+  "B",
+  # flake8-quotes
+  "Q",
+  # pylint
+  "PLE",
+  "PLR",
+  "PLW",
+  # misc lints
+  "PIE",
+  # flake8-pyi
+  "PYI",
+  # tidy imports
+  "TID",
+  # implicit string concatenation
+  "ISC",
 ]
 ignore = [
-    # space before : (needed for how black formats slicing)
-    # "E203",  # not yet implemented
-    # module level import not at top of file
-    "E402",
-    # do not assign a lambda expression, use a def
-    "E731",
-    "E501",
-    "PGH001",
-    "RET504",
-    "S101",
-    "F722",
-    'PLR2004',
-    "PLR0913",
+  # space before : (needed for how black formats slicing)
+  # "E203",  # not yet implemented
+  # module level import not at top of file
+  "E402",
+  # do not assign a lambda expression, use a def
+  "E731",
+  "E501",
+  "PGH001",
+  "RET504",
+  "S101",
+  "F722",
+  'PLR2004',
+  "PLR0913",
 ]
 unfixable = ["ERA001", "F401", "F841", "T201", "T203"]
 src = ["finitevolx"]
 target-version = "py38"
+
+[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
+line-length = 88
+target-version = ["py38"]
 
 
 [tool.isort]
@@ -129,3 +136,18 @@ combine_as_imports = true
 force_sort_within_sections = true
 force_grid_wrap = 2
 skip = 'docs'
+
+[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
+fail_under = 50
+precision = 1
+show_missing = true
+skip_covered = true
+
+[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html#run
+branch = true
+command_line = "--module pytest"
+data_file = "reports/.coverage"
+source = ["src"]
+
+[tool.coverage.xml] # https://coverage.readthedocs.io/en/latest/config.html#xml
+output = "reports/coverage.xml"
