--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         # Select the Python versions to test against
-        os: [ubuntu-20.04, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.10", "3.11"]
       fail-fast: true
     steps:
