--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,14 +31,30 @@ kernex = "^0.2.0"
 jupyter = "^1.0.0"
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.test.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
-pre-commit = "^3.2.2"
-beartype = "^0.13.1"
-ruff = "^0.0.263"
-black = "^23.3.0"
+pytest-pretty = "^1.1.1"
+pytest-xdist = "^3.2.1"
+networkx = "^3.0"
+coverage = "^7.2.2"
+absolufy-imports = "^0.3.1"
+xdoctest = "^1.1.1"
+mktestdocs = "^0.2.1"
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.1.0"
 isort = "^5.12.0"
+pylint = "^2.17.1"
+nox = "^2022.11.21"
+ruff = "^0.0.259"
+flax = "^0.6.8"
+pre-commit = "^3.2.2"
+nbstripout = "^0.6.1"
+pydocstyle = "^6.3.0"
+codespell = "^2.2.4"
+asv = "^0.6.0"
+interrogate = "^1.5.0"
 
 
 [tool.poetry.group.exp.dependencies]
@@ -49,17 +65,33 @@ matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
 autoroot = "^1.0.0"
 
-
 [tool.poetry.group.jlab.dependencies]
 ipykernel = "^6.22.0"
 autoroot = "^1.0.0"
 
-
-[tool.poetry.group.jbook.dependencies]
-jupyter-book = "^0.15.1"
-ghp-import = "^2.1.0"
-sphinx-proof = "^0.1.3"
+[tool.poetry.group.docs.dependencies]
+linkify-it-py = "^2.0.0"
+jinja2 = "^3.1.2"
+matplotlib = "^3.7.1"
+ipython = "^8.11.0"
+ipykernel = "^6.22.0"
+watermark = "^2.3.1"
 jupytext = "^1.14.5"
+mkdocs = "^1.4.2"
+mkdocs-material = "^9.1.8"
+pymdown-extensions = "^9.11"
+mknotebooks = "^0.7.1"
+pygments = "^2.15.1"
+mkdocs-bibtex = "^2.8.16"
+mkdocs-jupyter = "^0.24.1"
+mdx-truly-sane-lists = "^1.3"
+pytkdocs = "^0.16.1"
+mkdocs-gen-files = "^0.5.0"
+mkdocs-literate-nav = "^0.6.0"
+mkdocs-git-authors-plugin = "^0.7.0"
+mkdocstrings = { version = "^0.21.2", extras = ["python"] }
+markdown-katex = "^202112.1034"
+
 
 
 [build-system]
